@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.universal"
        name="Universal Scraper"
-       version="2.1.9"
+       version="2.2.0"
        provider-name="Olympia, Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
@@ -11,7 +11,7 @@
     <import addon="metadata.common.impa.com" version="1.0.3"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.7"/>
     <import addon="metadata.common.youtubetrailers" version="1.0.4"/>
-    <import addon="metadata.common.rt.com" version="1.3.0"/>
+    <import addon="metadata.common.rt.com" version="1.4.0"/>
     <import addon="metadata.common.ofdb.de" version="1.0.0"/>
     <import addon="metadata.common.trakt.tv" version="1.0.0"/>
     <import addon="metadata.common.port.hu" version="1.0.0"/>
