@@ -1,3 +1,9 @@
+[B]2.2.0[/B]
+- fixed: original title won't scrape
+- fixed: year in case of TV Movies
+- added: option to insert RT critics concensus as plot
+- added: option to not scrape tagline
+
 [B]2.1.9[/B]
 - fixed: issue with original title
 
